# scorchkit

./: .gitignore  .mcp.json  .semgrep.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.claude/: mcp.json
.claude/commands/: analyze.md  code.md  coder.md  diff.md  doctor.md  finding.md  modules.md  project.md  report.md  scan.md  schedule.md  tutorial.md
docs/: plugin-sdk.md  tools-checklist.md
docs/architecture/: agent.md  ai.md  api-spec-shared-data.md  assess.md  auth-config.md  cli.md  cloud.md  config.md  cve-backends.md  engine.md  hooks.md  infra.md  mcp.md  modules.md  overview.md  recon.md  report.md  runner.md  sast.md  scanner.md  storage.md  tools.md  vision.md
docs/guide/: development.md  getting-started.md  module-matrix.md  modules.md  projects.md
docs/modules/: acl.md  api-schema.md  api.md  auth.md  clickjacking.md  cloud-kubescape.md  cloud-prowler.md  cloud-scoutsuite.md  cloud.md  cmdi.md  cname_takeover.md  cors.md  crawler.md  crlf.md  csp.md  csrf.md  cve-match.md  cve-nvd.md  cve-osv.md  dep-audit.md  discovery.md  dns-infra.md  dns.md  dom_xss.md  graphql.md  headers.md  host_header.md  idor.md  injection.md  js_analysis.md  jwt.md  ldap.md  mass_assignment.md  misconfig.md  nmap-infra.md  nosql.md  path_traversal.md  pdf-report.md  prototype_pollution.md  ratelimit.md  (+17 more)
docs/tools/: amass.md  arjun.md  bandit.md  brakeman.md  cargo-audit.md  cargo-deny.md  cewl.md  checkov.md  commix.md  dalfox.md  dnsrecon.md  dnsx.md  dockle.md  droopescan.md  enum4linux.md  eslint-security.md  eyewitness.md  feroxbuster.md  ffuf.md  gau.md  gitleaks.md  gobuster.md  gosec.md  grype.md  hadolint.md  httpx.md  hydra.md  interactsh.md  katana.md  kerbrute.md  kics.md  kubescape.md  linkfinder.md  masscan.md  metasploit.md  naabu.md  nikto.md  nmap.md  nuclei.md  nxc.md  (+27 more)
docs/tutorials/: 01-first-scan.md  02-cve-correlation.md  03-unified-assess.md  04-claude-code-workflow.md  05-tls-and-dns-hygiene.md  06-extending-with-custom-modules.md  07-extending-cve-backends.md  08-ci-cd-integration.md  README.md
examples/custom_code_scanner/: Cargo.toml
examples/custom_code_scanner/src/: lib.rs
examples/custom_scanner/: Cargo.toml
examples/custom_scanner/src/: lib.rs
migrations/: 001_initial.sql  002_scan_schedules.sql  003_add_confidence.sql  004_add_status_note.sql
rules/: README.md
rules/examples/: admin-panel.yaml  debug-endpoint.yaml  server-header-disclosure.yaml
src/: facade.rs  lib.rs  main.rs  prelude.rs
src/agent/: config.rs  mod.rs  prompt.rs  runner.rs
src/ai/: analyst.rs  correlator.rs  mod.rs  planner.rs  prompts.rs  provider.rs  remediation.rs  response.rs  types.rs
src/cli/: args.rs  db.rs  doctor.rs  finding.rs  init.rs  mod.rs  project.rs  runner.rs  schedule.rs  serve.rs
src/cloud/: cloudsplaining.rs  cnspec.rs  kubescape.rs  mod.rs  pacu.rs  prowler.rs  scoutsuite.rs
src/cloud/aws/: cloudtrail.rs  iam.rs  mod.rs  s3.rs  sg.rs
src/cloud/azure/: keyvault.rs  mod.rs  nsg.rs  rbac.rs  storage.rs
src/cloud/gcp/: audit.rs  firewall.rs  gcs.rs  iam.rs  mod.rs
src/config/: cve.rs  mod.rs  types.rs
src/engine/: api_spec.rs  audit_log.rs  cloud_context.rs  cloud_credentials.rs  cloud_evidence.rs  cloud_module.rs  cloud_target.rs  code_context.rs  code_module.rs  compliance.rs  compliance_framework.rs  correlation.rs  cve.rs  error.rs  events.rs  evidence.rs  finding.rs  hook_runner.rs  infra_context.rs  infra_module.rs  infra_target.rs  mod.rs  module_trait.rs  network_credentials.rs  oob.rs  risk_score.rs  scan_context.rs  scan_result.rs  scope.rs  service_fingerprint.rs  severity.rs  shared_data.rs  target.rs  tls_enum.rs  tls_probe.rs
src/infra/: cpe_purl.rs  cve_cache.rs  cve_lookup.rs  cve_match.rs  cve_mock.rs  cve_multi.rs  cve_nvd.rs  cve_osv.rs  dns_probe.rs  mod.rs  nmap.rs  tcp_probe.rs  tls_probe.rs
src/mcp/: instructions.rs  mod.rs  prompts.rs  resources.rs  server.rs  tools.rs  types.rs
src/recon/: cloud.rs  cname_takeover.rs  crawler.rs  discovery.rs  dns.rs  headers.rs  js_analysis.rs  mod.rs  subdomain.rs  tech.rs  vhost.rs
src/report/: attack_chain.rs  dashboard.rs  diff.rs  html.rs  json.rs  mod.rs  pdf.rs  sarif.rs  terminal.rs
src/runner/: checkpoint.rs  cloud_orchestrator.rs  code_orchestrator.rs  hooks.rs  infra_orchestrator.rs  mod.rs  orchestrator.rs  plugin.rs  progress.rs  rule_engine.rs  subprocess.rs
src/sast/: dep_audit.rs  mod.rs
src/sast_tools/: bandit.rs  brakeman.rs  cargo_audit.rs  cargo_deny.rs  checkov.rs  dockle.rs  eslint_security.rs  gitleaks.rs  gosec.rs  grype.rs  hadolint.rs  kics.rs  kubescape.rs  mod.rs  osv_scanner.rs  phpstan.rs  scoutsuite.rs  semgrep.rs  slither.rs  snyk_code.rs  snyk_test.rs  tflint.rs
src/scanner/: acl.rs  api.rs  api_schema.rs  auth.rs  clickjacking.rs  cmdi.rs  cors.rs  crlf.rs  csp.rs  csrf.rs  dom_xss.rs  graphql.rs  host_header.rs  idor.rs  injection.rs  jwt.rs  ldap.rs  mass_assignment.rs  misconfig.rs  mod.rs  nosql.rs  path_traversal.rs  prototype_pollution.rs  ratelimit.rs  redirect.rs  sensitive.rs  smuggling.rs  ssl.rs  ssrf.rs  ssti.rs  subtakeover.rs  upload.rs  waf.rs  websocket.rs  xss.rs  xxe.rs
src/storage/: context.rs  findings.rs  intelligence.rs  metrics.rs  migrate.rs  mod.rs  models.rs  projects.rs  scans.rs  schedules.rs
src/tools/: amass.rs  arjun.rs  cewl.rs  commix.rs  dalfox.rs  dnsrecon.rs  dnsx.rs  droopescan.rs  enum4linux.rs  eyewitness.rs  feroxbuster.rs  ffuf.rs  gau.rs  gobuster.rs  httpx.rs  hydra.rs  interactsh.rs  katana.rs  kerbrute.rs  linkfinder.rs  masscan.rs  metasploit.rs  mod.rs  naabu.rs  nikto.rs  nmap.rs  nuclei.rs  nxc.rs  onesixtyone.rs  paramspider.rs  prowler.rs  smbmap.rs  sqlmap.rs  ssh_audit.rs  sslyze.rs  subfinder.rs  testssl.rs  theharvester.rs  trivy.rs  trufflehog.rs  (+7 more)
tests/: ai_types.rs  cli.rs  code_scan.rs  cve_nvd.rs  cve_osv.rs  hooks.rs  mcp_tools.rs  posture_metrics.rs  project_cli.rs  scan_plan.rs  scan_schedules.rs  storage.rs  storage_integration.rs
tests/fixtures/nvd/: empty_response.json  nginx_cve_response.json
(+1 files in other folders)
