[package]
name = "scorchkit"
version = "1.0.0"
edition = "2021"
description = "Web application security testing toolkit and orchestrator"
license = "MIT"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
module_name_repetitions = "allow"
future_not_send = "allow"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "multipart"], default-features = false }
url = { version = "2", features = ["serde"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# HTML parsing
scraper = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
indicatif = "0.17"
colored = "3"
console = "0.15"

# TLS inspection
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
webpki-roots = "1"
x509-parser = "0.16"

# Async trait
async-trait = "0.1"

# UUID for scan IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
governor = "0.8"

# Base64 for JWT
base64 = "0.22"

[features]
default = []
storage = ["dep:sqlx", "dep:sha2", "dep:croner"]
mcp = ["storage", "dep:rmcp", "dep:schemars"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"]
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.rmcp]
version = "1.3"
features = ["server", "transport-io", "macros"]
optional = true

[dependencies.croner]
version = "3"
optional = true

[dependencies.schemars]
version = "1.0"
optional = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
sha2 = "0.10"
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
croner = "3"
